Prevent text wrapping in table head

--- a/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
@@ -11,6 +11,10 @@ table.table {
     &.handel-head {
       width: 50px;
     }
+    a.sort_link {
+      display: inline-block;
+      width: max-content;
+    }
   }
 
   td {
